# FastDMS

./: .gitignore  LICENSE  README.md  bench.py  example.py  pyproject.toml
artifacts/: dms-fp8-batched-capacity-budget4g.json  quality-llama32-1b-dms-fp8compact-1024x4.json  quality-qwen3-8b-dms-fp8compact-1024x4.json  quality-vllm-llama32-1b-bf16-fp8-tq4-baseline.json  quality-vllm-qwen3-8b-bf16-fp8-tq4-baseline.json  vllm-bf16-fp8-baselines-summary.json
benchmarks/: bench_compact_decode.py  bench_compact_serving_compare.py  bench_llama_wikitext2.py  check_dms_compact_guard.py  check_dms_interface.py  check_env_forced_history_guard.py  check_fp8_kv_guard.py  check_llama_reference.py  check_long_context_dense.py  check_no_evict_regression.py  check_preempt_multiturn.py  compare_anchors.py  probe_attention_backend.py  smoke_compact_end_to_end.py  smoke_compact_multitenant.py  smoke_llama_end_to_end.py  soak_compact_dms.py
fastdms/: __init__.py  config.py  llm.py  sampling_params.py
fastdms/engine/: block_manager.py  compact_kv.py  dms.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
fastdms/layers/: attention.py  compact_attention.py  embed_head.py  linear.py  rotary_embedding.py
fastdms/layers/attention_backends/: __init__.py
fastdms/models/: llama.py  qwen3.py  registry.py
fastdms/utils/: context.py  profiler.py
tests/: test_compact_kv.py
training/: README.md  __init__.py  cache.py  data_utils.py  dms_eval.py  dms_mask.py  dms_train.py  edenn.py  linear_utils.py  model_utils.py  packed_cache.py  predictors.py  quantizers.py  train_predictors.py
training/grids/: EDEN2-16.pt  EDEN2-256.pt  EDEN2-64.pt
