[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fastdms"
version = "0.2.0"
authors = [{ name = "Leonard Lin" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "Production-speed compact Dynamic Memory Sparsification (DMS) for KV cache compression"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "huggingface-hub",
    "flash-attn",
    "numpy",
    "safetensors",
    "tqdm",
    "xxhash",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/shisa-ai/FastDMS"
Repository = "https://github.com/shisa-ai/FastDMS"
Issues = "https://github.com/shisa-ai/FastDMS/issues"

[project.optional-dependencies]
dev = ["pytest"]
training = ["datasets", "fast-hadamard-transform"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fastdms*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
